--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "EText is a messaging app that combines aspects of texting and emailing to make a unique messaging experience.\r ## Formal, yet efficient\r EText functions primarily like a texting app, but features extra capabilities, and customization for messages, allowing it to also be used in a formal environment.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
