--- a/RN-Build/package.json
+++ b/RN-Build/package.json
@@ -17,6 +17,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
